Fixed the initcase naming issue, it was left as case.regex and caseconv.fst, thereby not compiling.

--- a/src/Makefile
+++ b/src/Makefile
@@ -61,11 +61,11 @@ ifao.fst: ../bin/ifao.fst
 
  
 # The first goal is to build fao.fst, the analyzer.
-# This goal depends on fao.save and caseconv.fst being up to date
+# This goal depends on fao.save and inituppercase.fst being up to date
 
 fao.fst: ../bin/fao.fst
 ../bin/fao.fst: ../bin/fao.save \
-				../bin/caseconv.fst \
+				../bin/inituppercase.fst \
 				../bin/allcaps.fst \
 				../bin/tok.fst \
 				../bin/tagfix.fst
@@ -74,7 +74,7 @@ fao.fst: ../bin/fao.fst
 	@echo
 	@printf "read regex @\"../bin/tagfix.fst\" \
 					.o. @\"../bin/fao.save\" \
-					.o. @\"../bin/caseconv.fst\" ; \n\
+					.o. @\"../bin/inituppercase.fst\" ; \n\
 	save stack $@ \n\
 	quit \n" > ../../tmp/fao-fst-script
 	$(XFST)  < ../../tmp/fao-fst-script
@@ -102,19 +102,19 @@ abbr: ../bin/abbr.txt
 		--lex=$(ABBRSRCS)
 
 
-# The second goal is to build the caseconv.fst file
-# This goal depends on case.regex
+# The second goal is to build the inituppercase.fst file
+# This goal depends on inituppercase.regex
 
-caseconv.fst: ../bin/caseconv.fst
-../bin/caseconv.fst: case.regex
+inituppercase.fst: ../bin/inituppercase.fst
+../bin/inituppercase.fst: inituppercase.regex
 	@echo
-	@echo "*** Building caseconv.fst ***" ;
+	@echo "*** Building inituppercase.fst ***" ;
 	@echo
-	@printf "read regex < case.regex \n\
-	save stack ../bin/caseconv.fst \n\
-	quit \n" > ../../tmp/caseconv-script
-	$(XFST)  < ../../tmp/caseconv-script
-	@rm -f ../../tmp/caseconv-script
+	@printf "read regex < inituppercase.regex \n\
+	save stack ../bin/inituppercase.fst \n\
+	quit \n" > ../../tmp/inituppercase-script
+	$(XFST)  < ../../tmp/inituppercase-script
+	@rm -f ../../tmp/inituppercase-script
 
 
 # This goal depends on allcaps.regex
