Reorganised and simplified the makefile to prepare for infrastructure experiments. Xerox bails out with a Segmentation fault, but I can see no relation to the changes in the Makefile. Anyone else having the same problems?

--- a/src/Makefile
+++ b/src/Makefile
@@ -35,7 +35,7 @@ LEX = fao-lex.txt \
 	  interj-fao-lex.txt \
 	  det-fao-lex.txt
 
-
+all: ifao.fst
 
 # The ultimate goal is to build ifao.fst, the generator
 # This goal depends on fao.save being up to date.
@@ -62,7 +62,6 @@ ifao.fst: ../bin/ifao.fst
  
 # The first goal is to build fao.fst, the analyzer.
 # This goal depends on fao.save and inituppercase.fst being up to date
-
 fao.fst: ../bin/fao.fst
 ../bin/fao.fst: ../bin/fao.save \
 				../bin/inituppercase.fst \
@@ -83,7 +82,6 @@ fao.fst: ../bin/fao.fst
 
 # Here we make the abbrevation file for our current preprocessor, 
 # the perl-based preprocess (located in the script catalogue)
-
 empty:=
 comma:=,
 space:=$(empty) $(empty)
@@ -102,60 +100,38 @@ abbr: ../bin/abbr.txt
 		--lex=$(ABBRSRCS)
 
 
-# The second goal is to build the inituppercase.fst file
-# This goal depends on inituppercase.regex
+# The second goal is to build several fst files:
+# - inituppercase.fst - accept initial uppercase variants
+# - allcaps.fst        - accept all uppercase variants
+# - tagfix.fst         - cleaning up bad lexicon design: +N+Prop+N -> +N+Prop
+# - tok.fst            - a regex tokenizer
+# They all depend on the corresponding *.regex file.
+allcaps: ../bin/allcaps.fst
+inituppercase: ../bin/inituppercase.fst
+tagfix: ../bin/tagfix.fst
+tok: ../bin/tok.fst
 
-inituppercase.fst: ../bin/inituppercase.fst
-../bin/inituppercase.fst: inituppercase.regex
+%.fst: ../bin/%.fst
+../bin/%.fst: %.regex
 	@echo
-	@echo "*** Building inituppercase.fst ***" ;
+	@echo "*** Building $(notdir $@) ***" ;
 	@echo
-	@printf "read regex < inituppercase.regex \n\
-	save stack ../bin/inituppercase.fst \n\
-	quit \n" > ../../tmp/inituppercase-script
-	$(XFST)  < ../../tmp/inituppercase-script
-	@rm -f ../../tmp/inituppercase-script
-
-
-# This goal depends on allcaps.regex
-
-allcaps.fst: ../bin/allcaps.fst
-../bin/allcaps.fst: allcaps.regex
-	@echo
-	@echo "*** Building allcaps.fst ***" ;
-	@echo
-	@printf "source allcaps.regex \n\
-	save stack ../bin/allcaps.fst \n\
-	quit \n" > ../../tmp/tok-script
-	$(XFST)  < ../../tmp/tok-script
-	@rm -f ../../tmp/tok-script
-
-# This goal depends on tagfix.regex
-
-tagfix.fst: ../bin/tagfix.fst
-../bin/tagfix.fst: tagfix.regex
-	@echo
-	@echo "*** Building tagfix.fst ***" ;
-	@echo
-	@printf "source tagfix.regex \n\
-	save stack ../bin/tagfix.fst \n\
-	quit \n" > ../../tmp/tok-script
-	$(XFST)  < ../../tmp/tok-script
-	@rm -f ../../tmp/tok-script
+	$(XFST) -e "read regex < $< " \
+			-e "save stack   $@ " \
+			-stop
 
 
 # The third goal is to build fao.save
 # This goal depends on twol-fao.bin and a bunch of lexicon files
-
 fao.save: ../bin/fao.save
 ../bin/fao.save: ../bin/twol-fao.bin $(LEX)
 	@echo
 	@echo "*** Building fao-lex.save ***" ;
 	@echo
 	printf "compile-source $(LEX)  \n\
-	read-rules ../bin/twol-fao.bin \n\
+	read-rules $< \n\
 	compose-result \n\
-	save-result ../bin/fao.save \n\
+	save-result $@ \n\
 	quit \n" > ../../tmp/fao-lex-save-script
 	$(LEXC)  < ../../tmp/fao-lex-save-script
 	rm -f ../../tmp/fao-lex-save-script
@@ -163,8 +139,7 @@ fao.save: ../bin/fao.save
 
 # The fourth goal is to build twol-fao.bin
 # This goal depends on twol-fao.txt
-
-twol-fao.bin: ../bin/twol.fao.bin
+twol-fao.bin: ../bin/twol-fao.bin
 ../bin/twol-fao.bin: twol-fao.txt
 	@echo
 	@echo "*** Building twol-fao.bin ***" ;
@@ -178,66 +153,30 @@ twol-fao.bin: ../bin/twol.fao.bin
 
 # Here we include a preprocessor.
 # This goal depends on tok.regex
-
 tok.fst: ../bin/tok.fst 
 ../bin/tok.fst: tok.regex
 	@echo
-	@echo "*** Building the tokenizer tok.fst ***" ;
+	@echo "*** Building the tokenizer $(notdir $@) ***" ;
 	@echo
-	@printf "source tok.regex \n\
-	save stack ../bin/tok.fst \n\
+	@printf "source $< \n\
+	save stack $@ \n\
 	quit \n" > ../../tmp/tok-script
 	$(XFST)  < ../../tmp/tok-script
 	@rm -f ../../tmp/tok-script
 
 # Let us just make a binary disambiguator
-# It can be used instead of the source file.
+# and dependency grammar.
+# They can be used instead of the source files.
 dis-bin: ../bin/fao-dis.bin
-../bin/fao-dis.bin: fao-dis.rle
+../bin/%.bin: %.rle
 	@echo
-	@echo "*** Building a binary disambiguator fao-dis.bin ***" ;
+	@echo "*** Building a binary $(notdir $@) ***" ;
 	@echo
-	@vislcg3 --grammar fao-dis.rle \
+	@vislcg3 --grammar $< \
 			 --grammar-only \
-			 --grammar-bin ../bin/fao-dis.bin \
+			 --grammar-bin $@ \
 			 -C UTF-8
-
-
-# Let us just make a binary dependency grammar
-# It can be used instead of the source file.
-dep-bin: ../bin/fao-dep.bin
-../bin/fao-dep.bin: fao-dep.rle
-	@echo
-	@echo "*** Building a binary disambiguator fao-dep.bin ***" ;
-	@echo
-	@vislcg3 --grammar fao-dep.rle \
-			 --grammar-only \
-			 --grammar-bin ../bin/fao-dep.bin \
-			 -C UTF-8
-
 
 # "make clean" is there to remove the binary files at will.
-
 clean:
-	@rm -f ../bin/*.fst ../bin/*.save ../bin/*.bin
-
-
-
-#fao.save: ../bin/fao.save
-#../bin/fao.save: ../bin/twol-fao.bin fao-lex.txt adj-fao-lex.txt \
-#	adv-fao-lex.txt noun-fao-lex.txt verb-fao-lex.txt \
-#	closed-fao-lex.txt pp-fao-lex.txt propernoun-fao-lex.txt
-#	@echo
-#	@echo "*** Building fao.save ***" ;
-#	@echo
-#	printf "compile-source fao-lex.txt adj-fao-lex.txt adv-fao-lex.txt \
-#	noun-fao-lex.txt verb-fao-lex.txt closed-fao-lex.txt \
-#	pp-fao-lex.txt propernoun-fao-lex.txt \n\
-#	read-rules ../bin/twol-fao.bin \n\
-#	compose-result \n\
-#	save-result ../bin/fao.save \n\
-#	quit \n" > ../../tmp/fao-save-script
-#	$(LEXC) < ../../tmp/fao-save-script
-#	rm -f ../../tmp/fao-save-script
-
-
+	@rm -f ../bin/*
