Corrected paths to reflect the current (non-optimal) state.

--- a/configure.ac
+++ b/configure.ac
@@ -29,11 +29,11 @@ AC_SUBST([GT_639_2], [fao])
 # will be GT_PROG_SCRIPTS_PATHS:
 AC_ARG_VAR([GTHOME], [root directory of giellatekno scripts])
 AC_PATH_PROG([GTSCRIPT], [gt-version.sh], [false],
-             [$GTHOME/scripts/$PATH_SEPARATOR../scripts/])
+             [$GTHOME/gt/script/$PATH_SEPARATOR../gt/script/])
 AS_IF([test "x$GTSCRIPT" = xfalse], 
       [AC_MSG_ERROR([could not find a giellatekno installation in: \
-       $GTHOME/scripts \
-       ../scripts \
+       $GTHOME/gt/script \
+       ../gt/script \
        $PATH \
        please do at least first step of the following: \
        a. cd .. && svn co https://victorio.uit.no/langtech/trunk/gtlangs/scripts \
