Do phonology before morphology (no specific reason, it just feels more naturally this way).

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@
 ## Licence: GPL v3+
 
 # order is always . last here
-SUBDIRS = morphology phonology orthography syntax spellchecker .
+SUBDIRS = phonology morphology orthography syntax spellchecker .
 
 include $(top_srcdir)/am-shared/topdir-include.am
 
