--- a/src/spellchecker/Makefile.am
+++ b/src/spellchecker/Makefile.am
@@ -15,30 +15,6 @@
 ## You should have received a copy of the GNU General Public License
 ## along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-GT_DICTIONARY_HFST=dictionary.default.hfst
-
-#include $(GT_COMMON_AM)/spellchecker-include.am =:
-GT_ERRMODELS=
-if WANT_HFST
-#GT_ERRMODELS+=errmodel.edit-distance-1.hfst
-GT_ERRMODELS+=default-error-model.hfst
-endif
-
-noinst_DATA=$(GT_ERRMODELS)
-
-../$(GT_DICTIONARY_HFST):
-	$(MAKE) -C .. $(GT_DICTIONARY_HFST)
-
-%.hfst: %.txt ../$(GT_DICTIONARY_HFST)
-	$(GTHOME)/gt/script/editdist.py -v -s -d 2 -e '@0@' -i $<   \
-		-a ../$(GT_DICTIONARY_HFST) | \
-		$(HFST_TXT2FST) $(HFST_FLAGS) -e '@0@' | \
-		$(HFST_FST2FST) $(HFST_FLAGS) -f olw -o $@
-
-# %.hfst: %.txt
-# 	$(HFST_TXT2FST) $(HFST_FLAGS) -i $< -o $@
-
-clean-local:
-	-rm -f *.hfst *.xfst
+include $(top_srcdir)/am-shared/spellchecker-include.am
 
 # vim: set ft=automake:
