uppercasing example in fao

--- a/src/orthography/Makefile.am
+++ b/src/orthography/Makefile.am
@@ -2,3 +2,6 @@
 ## Copyright: Sámediggi/Divvun/UiT
 ## Licence: GPL v3+
 
+GT_UPPERCASINGS=inituppercase.regex allcaps.xfst
+
+include $(top_srcdir)/am-shared/uppercase-include.am
