--- a/src/syntax/Makefile.am
+++ b/src/syntax/Makefile.am
@@ -2,3 +2,9 @@
 ## Copyright: Sámediggi/Divvun/UiT
 ## Licence: GPL v3+
 
+GT_DEPENDENCY=dependency.rle
+GT_DISAMBIGUATION=disambiguation.rle
+
+GT_CG_TARGETS=disambiguation.bin
+
+include $(top_srcdir)/am-shared/syntax-include.am
