--- a/Makefile.am
+++ b/Makefile.am
@@ -2,5 +2,5 @@
 ## Copyright: Sámediggi/Divvun/UiT
 ## Licence: GPL v3+
 
-ACLOCAL_AMFLAGS = -I ${GTCORE}/am-shared/m4 -I m4
+ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = src doc
